openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: livora
  labels:
    app: livora
spec:
  type: ClusterIP
  selector:
    app: livora
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
