openshift/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: livora
  labels:
    app: livora
spec:
  to:
    kind: Service
    name: livora
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
